[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Editor/Editor_button.png" type="Texture" id=1]
[ext_resource path="res://Images/Editor/Editor_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Screens/Editor/Editor_button.gd" type="Script" id=3]
[ext_resource path="res://Images/Fonts/KeepCalm-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 200
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Editor_button" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]
value = "test"

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 599.0
margin_bottom = 357.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="button_down" from="." to="." method="_on_Editor_button_button_down"]

[connection signal="button_up" from="." to="." method="_on_Editor_button_button_up"]

[connection signal="pressed" from="." to="." method="_on_Editor_button_pressed"]


